them giao dien va sua hinh anh